fixed image overflowing

--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -10,7 +10,7 @@ h1.intro-ext {
 
 .side img {
     width: 80%;
-    margin-right: -1.09rem;
+    margin-right: -1.15rem;
 }
 
 p.about-ext {
